--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 .postOuter {
   background-color: #FAFAFA;
   width: 100%;
@@ -42,4 +46,8 @@
 
 .negative {
   color: red;
+}
+
+img {
+  width: 200px;
 }
